--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ body {
   /* apply the GitHub dark theme */
   background: none !important;
 }
+
+.cm-editor {
+  height: '100%';
+  background-color: #1d1d1d  !important;
+}
+.cm-scroller {
+  height: '100%' !important;
+}
